--- a/index.ipynb
+++ b/index.ipynb
@@ -71,10 +71,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sample_function()"
+   ]
   },
   {
    "cell_type": "markdown",
